Fix alignment

--- a/src/Components/FloatingDiv/FloatingDiv.css
+++ b/src/Components/FloatingDiv/FloatingDiv.css
@@ -1,7 +1,15 @@
 .floating{
-    justify-content: space-around;
-    display: flex;
-    background: black;
-    box-shadow: var(--boxShadow);
-    border-radius: 17px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+  box-shadow: var(--boxShadow);
+  z-index: 2;
+  width: 250px;
+  height: 100px;
+  border-radius: 17px;
+}
+
+.floating > img{
+    transform: scale(0.4);
 }
